tests/NormalTests/paczka1/fuzzy1/61985053.err
Error in line 1: e6j258J S203 40,1
Error in line 7: TAGHStqu S371 41,7
Error in line 13: TAGHStqu S894 21,5
Error in line 17: TAGHStqu S371 65,9
Error in line 19: TAGHStqu A754 24,0
Error in line 12: wonJse9p A754 39,6
Error in line 40: TAGHStqu S894 172,96
